@@ -1,23 +1,0 @@
-/*
- * dump-imports.h --
- *
- *      Operations to dump module import hierarchies.
- *
- * Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
- *
- * See the file "COPYING" for information on usage and redistribution
- * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
- *
- * @(#) $Id$
- */
-
-#ifndef _DUMP_IMPORTS_H
-#define _DUMP_IMPORTS_H
-
-
-
-extern int dumpImports(const char *modulename);
-
-
-
-#endif /* _DUMP_IMPORTS_H */
